modify notification flow